# world-cup-near-me

./: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f06044b030d_add_processed_column_to_raw_events.py  3af8c67bd054_add_image_fields_to_raw_events.py  495baf4975c6_add_indexes_to_events_and_raw_events.py  93c26c8d3c94_add_event_end_date_to_events.py  dacabb847c12_create_initial_tables.py  e6adc87af247_add_event_timezone_to_events.py  fc4d56243fc7_add_balldontlie_id_to_matches.py
backend/app/: database.py  models.py
backend/pipeline/: ai_extractor.py  extractor.py  fetch_teams.py  mock_scraper.py  seed_matches_api_football.py  seed_matches_balldontlie.py
backend/pipeline/prompts/: v1.py  v2.py
data/: mock_raw_events.json  teams.json
docker/: docker-compose.yml
