[project]
name = "world-cup-near-me"
version = "0.1.0"
description = "AI-enhanced World Cup event finder platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.39.0",
    "dateparser>=1.4.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]
